--- a/node.html
+++ b/node.html
@@ -6,7 +6,14 @@
     <title>문서 객체 모델 이해하기</title>
   </head>
   <body>
-    <h1>h1</h1>
-    <a href="#">a</a>
+    <button>클릭</button>
+    <input type="text" />
+    <script>
+      const btnEl = document.querySelector("button");
+      btnEl.addEventListener("click", (e) => {
+        console.log("click event!");
+        console.log(e);
+      });
+    </script>
   </body>
 </html>
