--- a/html/what_i_do.html
+++ b/html/what_i_do.html
@@ -37,10 +37,10 @@
           </div>
           <div class="do-inner">
             <div class="icon">
-              <i class="fa-brands fa-html5"></i>
+              <i class="fa-brands fa-css3-alt"></i>
             </div>
             <div class="content">
-              <h3>HTML5</h3>
+              <h3>CSS3</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo
                 culpa magni laboriosam sit execpturi quibusdam adipisci, vero
@@ -50,10 +50,10 @@
           </div>
           <div class="do-inner">
             <div class="icon">
-              <i class="fa-brands fa-html5"></i>
+              <i class="fa-brands fa-bootstrap"></i>
             </div>
             <div class="content">
-              <h3>HTML5</h3>
+              <h3>BootStrap v5.0</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo
                 culpa magni laboriosam sit execpturi quibusdam adipisci, vero
