최종 프로젝트

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <main id="main">
       <div class="container">
         <h4>Welcome</h4>
-        <h2>I'M A <span>Front-End Developer</span></h2>
+        <h2>I'M A <span></span></h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Prasentium
           dolor quas nulla undea officiis?
@@ -246,5 +246,6 @@
         </div>
       </div>
     </section>
+    <script src="script.js"></script>
   </body>
 </html>
