--- a/index.html
+++ b/index.html
@@ -14,24 +14,32 @@
     <link href="./style.css" rel="stylesheet" />
   </head>
   <body>
-    <header>
+    <header class="active">
       <div class="container">
         <h1>
-          <button>SU</button>
+          <button data-animation-scroll="true" data-target="#main">SU</button>
         </h1>
         <nav>
           <ul>
             <li>
-              <button>About</button>
+              <button data-animation-scroll="true" data-target="#about">
+                About
+              </button>
             </li>
             <li>
-              <button>Features</button>
+              <button data-animation-scroll="true" data-target="#features">
+                Features
+              </button>
             </li>
             <li>
-              <button>Portfolio</button>
+              <button data-animation-scroll="true" data-target="#portfolio">
+                Portfolio
+              </button>
             </li>
             <li>
-              <button>Contact</button>
+              <button data-animation-scroll="true" data-target="#contact">
+                Contact
+              </button>
             </li>
           </ul>
         </nav>
